[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/UI.theme" type="Theme" id=1]
[ext_resource path="res://assets/icons/icon_goldbag.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_goldbar.png" type="Texture" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Panel" parent="."]
margin_left = 512.0
margin_top = 16.0
margin_right = 552.0
margin_bottom = 56.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="GridContainer" parent="Currency"]
margin_right = 164.0
margin_bottom = 74.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_goldore" type="TextureRect" parent="Currency/Currency"]
margin_right = 32.0
margin_bottom = 35.0
texture = ExtResource( 2 )

[node name="margin_goldore" type="MarginContainer" parent="Currency/Currency"]
margin_left = 42.0
margin_right = 138.0
margin_bottom = 35.0
custom_constants/margin_top = 7
custom_constants/margin_bottom = -7

[node name="value_goldore" type="RichTextLabel" parent="Currency/Currency/margin_goldore"]
margin_top = 7.0
margin_right = 96.0
margin_bottom = 42.0
rect_min_size = Vector2( 96, 35 )
bbcode_text = "0 oz"
text = "0 oz"

[node name="icon_goldbar" type="TextureRect" parent="Currency/Currency"]
margin_top = 39.0
margin_right = 32.0
margin_bottom = 74.0
texture = ExtResource( 3 )

[node name="margin_goldbar" type="MarginContainer" parent="Currency/Currency"]
margin_left = 42.0
margin_top = 39.0
margin_right = 138.0
margin_bottom = 74.0
custom_constants/margin_top = 7
custom_constants/margin_bottom = -7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_goldbar" type="RichTextLabel" parent="Currency/Currency/margin_goldbar"]
margin_top = 7.0
margin_right = 96.0
margin_bottom = 42.0
rect_min_size = Vector2( 96, 35 )
bbcode_enabled = true
bbcode_text = "0 oz"
text = "0 oz"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 249.0
margin_top = 159.0
margin_right = 437.0
margin_bottom = 203.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RentParcel" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 17.0
text = "Rent Parcel (0.1 oz)"

[node name="SmeltOre" type="Button" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 188.0
margin_bottom = 38.0
text = "Smelt Ore"

[node name="Options" type="Panel" parent="."]
margin_left = 247.0
margin_top = 225.0
margin_right = 437.0
margin_bottom = 316.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="Options/VBox"]
margin_right = 190.0
margin_bottom = 15.0
size_flags_vertical = 1
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minigame" type="GridContainer" parent="Options/VBox"]
margin_top = 30.0
margin_right = 190.0
margin_bottom = 91.0
size_flags_vertical = 3
custom_constants/hseparation = 15
columns = 2

[node name="Digging" type="Label" parent="Options/VBox/Minigame"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 16.0
text = "Digging"

[node name="DiggingOption" type="OptionButton" parent="Options/VBox/Minigame"]
margin_left = 65.0
margin_right = 190.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Time"
items = [ "Time", null, false, 0, null, "Reaction Game", null, false, 1, null ]
selected = 0

[node name="Panning" type="Label" parent="Options/VBox/Minigame"]
margin_top = 22.0
margin_right = 50.0
margin_bottom = 37.0
text = "Panning"

[node name="PanningOption" type="OptionButton" parent="Options/VBox/Minigame"]
margin_left = 65.0
margin_top = 21.0
margin_right = 190.0
margin_bottom = 38.0
text = "Time"
items = [ "Time", null, false, 0, null, "Reaction Game", null, false, 1, null ]
selected = 0
[connection signal="pressed" from="VBoxContainer/RentParcel" to="." method="_on_RentParcel_pressed"]
[connection signal="pressed" from="VBoxContainer/SmeltOre" to="." method="_on_SmeltOre_pressed"]
[connection signal="item_selected" from="Options/VBox/Minigame/DiggingOption" to="." method="_on_DiggingOption_item_selected"]
[connection signal="item_selected" from="Options/VBox/Minigame/PanningOption" to="." method="_on_PanningOption_item_selected"]
